--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ function update(){
 </head>
 <body id="cl-container">
 <form onsubmit="">
-<label>Cld URL:</label>
+<label>URL:</label>
 <input type="text" style="width:800px" onchange="update();" id="cldURL" value=""><br/>
 <label>Tolerance:</label>
 <input type="text" value="40" onchange="update();" id="tolerance" style="width:40px">
